kubernetes/keycloak/base/keycloak-db.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
spec:
  serviceName: keycloak-postgresql-external
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-postgresql
  template:
    metadata:
      labels:
        app: keycloak-postgresql
    spec:
      containers:
        - name: postgres
          image: postgres:10
          # imagePullPolicy: IfNotPresent
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: keycloak-postgresql
              mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
    - metadata:
        name: keycloak-postgresql
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "ocs-storagecluster-ceph-rbd"
        resources:
          requests:
            storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgresql-external
spec:
  ports:
    - port: 5432
      name: postgres
  clusterIP: None
  selector:
    app: keycloak-postgresql
