kubernetes/keycloak/base/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: keycloak
  name: keycloak
  annotations:
    route.openshift.io/termination: "reencrypt"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "1024m"
spec:
  tls:
  - hosts:
      - keycloak.nerc.mghpcc.org
    secretName: keycloak-tls  # pragma: allowlist secret
  rules:
    - host: keycloak.nerc.mghpcc.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8443
